--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Rifat Nabi's Git Achievements <img src='http://www.gravatar.com/avatar/392ad9591d2b38dbdefc04af90ced991'/></h2>
-Unlocked       23/      53 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 140 points<br>
+Unlocked       23/      53 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 143 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -48,6 +48,7 @@ Unlocked       23/      53 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Stone Mason (Level 1)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Apprentice Stone Mason (Level 3)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Apprentice Thug (Level 1)</div>  <div class="info">Forced pushed a branch with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a> -f</div></li>
+<li><div class="title">Apprentice Thug (Level 2)</div>  <div class="info">Forced pushed a branch with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a> -f</div></li>
 <li><div class="title">Author (Level 4)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Author (Level 5)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Baptised</div>  <div class="info">Set global user name using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
@@ -62,27 +63,27 @@ Unlocked       23/      53 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-2482 status
-1213 symbolic-ref
-1177 rev-parse
+2501 status
+1231 symbolic-ref
+1195 rev-parse
 1136 branch
   50 checkout
+  42 push
   40 config
-  35 push
   34 log
-  30 commit
+  32 commit
   27 remote
   25 help
+  24 add
   23 diff
-  22 add
   21 achievements
   19 flow
   18 reset
+  17 tag
   17 pull
   16 ls-files
   14 rm
   14 bisect
-  12 tag
    9 init
    9 clone
    8 clean
